# impersonation

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml
src/: conversation_manager.py
src/agent/: __init__.py  agent_abc.py  base_agent.py
src/agent/conversation/: __init__.py  conversation_agent.py
src/agent/conversation/utils/: __init__.py  message.py  response.py
src/agent/utils/: __init__.py  llm_client.py
src/discord_client/: __init__.py  discord_client.py
src/text_files/: chat_history.txt  framework.txt  prompt.txt
src/twitter/: __init_.py  twitter_client.py
src/utils/: __init__.py  config.py  conversation_manager.py  message.py  sanitize_name.py
